# xvla-baseline

./: .gitignore  AGENTS.md  README.md  convert_hdf5_to_torch.py  inspect_hdf5_structure.py  probe_one_sample.py  pyproject.toml  requirements.txt  trajectory_hdf5_structure.md
docs/experiments/balanced232_050000/: report.md
openspec/: README.md
openspec/changes/add-xvla-smolvla-baseline/: design.md  eval-design.md  proposal.md  reader-design.md  smolvla-train-design.md  tasks.md  xsens-hdf5-inspection.md
openspec/changes/add-xvla-xsens-multitask-baseline/: design.md  download-log.md  proposal.md  tasks.md
openspec/changes/add-xvla-zmq-policy-inference/: design.md  proposal.md  tasks.md
openspec/specs/xvla-smolvla-baseline/: spec.md
robomind_static/static/: RoboMIND_v1_2_instr.csv  all_robot_h5_info.md  all_robot_h5_info_v1.2.md
scripts/: build_balanced_xsens_lerobot.py  build_training_report.py  convert_xsens_to_lerobot.py  eval_smolvla_val_loss.py  export_metrics_to_tensorboard.py  inspect_smolvla_open_loop.py  render_smolvla_open_loop_video.py  split_lerobot_episodes.py  train_smolvla_lora.py  write_task_distribution_manifest.py
src/xvla_baseline/: __init__.py
src/xvla_baseline/data/: __init__.py  build_balanced_xsens_lerobot.py  convert_xsens_to_lerobot.py  robomind_xsens_reader.py  split_lerobot_episodes.py  task_distribution_manifest.py
src/xvla_baseline/eval/: __init__.py  eval_smolvla_val_loss.py  export_metrics_to_tensorboard.py  inspect_smolvla_open_loop.py  render_smolvla_open_loop_video.py
src/xvla_baseline/training/: __init__.py  (+1 more)
(+11 files in other folders)
